# GALFRB

./: .gitignore  LICENSE  README.md  download_sdss_wise_data.py  environment.yml  pyproject.toml  requirements.txt
examples/: construct_cdf_mass_chi.ipynb  data_postprocessing.ipynb  load_precomputed_p_mr_distributions.html  load_precomputed_p_mr_distributions.ipynb  load_stellar_mass_dists.ipynb  mock_population.ipynb  p_mr_pop_module.py  visualize_CDFs.ipynb
examples/p_mass_dists/: stellar_mass_distr.h5  stellar_mass_distr_chi_0.00.h5  stellar_mass_distr_chi_0.01.h5  stellar_mass_distr_chi_0.02.h5  stellar_mass_distr_chi_0.03.h5  stellar_mass_distr_chi_0.04.h5  stellar_mass_distr_chi_0.05.h5  stellar_mass_distr_chi_0.06.h5  stellar_mass_distr_chi_0.07.h5  stellar_mass_distr_chi_0.08.h5  stellar_mass_distr_chi_0.09.h5  stellar_mass_distr_chi_0.10.h5  stellar_mass_distr_chi_0.11.h5  stellar_mass_distr_chi_0.12.h5  stellar_mass_distr_chi_0.13.h5  stellar_mass_distr_chi_0.14.h5  stellar_mass_distr_chi_0.15.h5  stellar_mass_distr_chi_0.16.h5  stellar_mass_distr_chi_0.17.h5  stellar_mass_distr_chi_0.18.h5  stellar_mass_distr_chi_0.19.h5  stellar_mass_distr_chi_0.20.h5  stellar_mass_distr_chi_0.21.h5  stellar_mass_distr_chi_0.22.h5  stellar_mass_distr_chi_0.23.h5  stellar_mass_distr_chi_0.24.h5  stellar_mass_distr_chi_0.25.h5  stellar_mass_distr_chi_0.26.h5  stellar_mass_distr_chi_0.27.h5  stellar_mass_distr_chi_0.28.h5  stellar_mass_distr_chi_0.29.h5  stellar_mass_distr_chi_0.30.h5  stellar_mass_distr_chi_0.31.h5  stellar_mass_distr_chi_0.32.h5  stellar_mass_distr_chi_0.33.h5  stellar_mass_distr_chi_0.34.h5  (+66 more)
libs/: read_transients_data.py
src/: __init__.py
styles/: nick_style.mplstyle
(+108 files in other folders)
