[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"] # From which folder we start to build packages

[tool.hatch.version]
path = "src/__init__.py" # dynamically set version as the variable value in this python file

[project]
name = "GALFRB" #package name
dynamic = ["version"] # specify version as a dynamic variable: dynamically set version by previous path
#version = "0.1.0" # Set version as fixed
authors = [
  { name="Nick Loudas", email="loudas@princeton.edu" },
]
description = "GALaxy properties for FRB progenitor identification"
readme = "README.md"
requires-python = ">=3.8" # The error would occurs when users install this package on python versions below 3.7
classifiers = [ # Show basic information of packages
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies=[ # Would automatically install these three packages when we build and install our package using pip install -e .
    "numpy>=1.24.1", #for specific package version: numpy==1.2.62, numpy>=1
    "scipy",
    "matplotlib",
    "pandas",
    "h5py",
    "astropy",
    "seaborn",
    "tqdm",
    "tabulate",
    "requests"
]

#[project.optional-dependencies]
#docs = [ # These packages would not be automatically installed. The users may need to install them if they want more functionalities
#    "myst_parser",
#    "sphinx",
#    "sphinx-rtd-theme"
#]


[project.urls] # Helpful Links Related to Package
"Homepage" = "https://github.com/loudasnick/GALFRB"

